syntax = "proto3";

package family;

option java_multiple_files = true;
option java_package = "family";
option java_outer_classname = "FamilyProto";

message NodeInfo {
  string host = 1;
  int32 port = 2;
}

message FamilyView {
  repeated NodeInfo members = 1;
}

message Empty {}

message ChatMessage {
  string text = 1;
  string fromHost = 2;
  int32 fromPort = 3;
  int64 timestamp = 4;
}

service FamilyService {
  rpc Join (NodeInfo) returns (FamilyView);
  rpc GetFamily (Empty) returns (FamilyView);

  rpc ReceiveChat (ChatMessage) returns (Empty);
}
